# parallelism_theory

./: CMakeLists.txt  Makefile  README.md
source/: main.cpp
task2/: .gitignore  README.md
task2/part1/: Makefile  main.cpp  program
task2/part2/: Makefile  main.cpp  program
task2/part3/3.1/: Makefile  main.cpp  program
task2/part3/3.2/: main.cpp  program
task3/: .gitignore
task3/part1/: Makefile  main.cpp  results.csv
task3/part2/: client_1.txt  client_2.txt  client_3.txt  main.cpp
task4/: main.py
task5/: README.md  main.py
task6/: Makefile  main_cpu.cpp  main_gpu1.cpp  main_gpu2.cpp  main_gpu3.cpp
task7/: Makefile  main_cublas.cpp
task8/: Makefile  main_cub.cu
